<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.petify.activities.CargarViajeActivity">

    <TextView
        android:id="@+id/cargarViajeTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/com_facebook_blue"
        android:theme="@style/Title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/origin_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:textColor="@color/grey"
                        android:textSize="17dp"
                        android:theme="@style/Texto" />

                    <TextView
                        android:id="@+id/destination_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:textColor="@color/grey"
                        android:textSize="17dp"
                        android:theme="@style/Texto" />

                    <TextView
                        android:id="@+id/distance_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:textColor="@color/grey"
                        android:textSize="17dp"
                        android:theme="@style/Texto" />

                    <TextView
                        android:id="@+id/duration_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:textColor="@color/grey"
                        android:textSize="17dp"
                        android:theme="@style/Texto" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp">

                        <android.support.design.widget.TextInputLayout
                            style="@style/Textbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:textColorHint="@color/grey"
                            android:theme="@style/Textbox"
                            app:boxStrokeColor="@color/grey">

                            <EditText
                                android:id="@+id/cargar_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="top"
                                android:hint="Reserva"
                                android:importantForAutofill="no"
                                android:inputType="date" />

                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/cargar_pick_date"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/white"
                            android:src="@drawable/date" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearlayout_cant_mascotas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:src="@drawable/pawp" />

                        <Spinner
                            android:id="@+id/cantidad_mascotas_p"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:entries="@array/cantM"
                            android:paddingLeft="0dp"
                            android:paddingRight="30dp"
                            android:textAlignment="textEnd"
                            android:theme="@style/Spinner" />

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/pawm" />

                        <Spinner
                            android:id="@+id/cantidad_mascotas_m"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:entries="@array/cantM"
                            android:paddingLeft="0dp"
                            android:paddingRight="30dp"
                            android:textAlignment="textEnd"
                            android:theme="@style/Spinner" />

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/pawg" />

                        <Spinner
                            android:id="@+id/cantidad_mascotas_g"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:entries="@array/cantM"
                            android:paddingLeft="0dp"
                            android:paddingRight="30dp"
                            android:textAlignment="textEnd"
                            android:theme="@style/Spinner" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viaja_acompanante_text"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:text="@string/viaja_acompanante"
                            android:theme="@style/Texto" />

                        <Switch
                            android:id="@+id/viaja_acompanante"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/forma_pago_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:text="@string/forma_pago"
                            android:theme="@style/Texto" />

                        <Spinner
                            android:id="@+id/forma_pago"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:entries="@array/formaP"
                            android:textAlignment="textEnd"
                            android:theme="@style/Spinner" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/multiline"
                            style="@style/Textbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:textColorHint="@color/grey"
                            android:theme="@style/Textbox"
                            app:boxStrokeColor="@color/grey">

                            <EditText
                                android:id="@+id/observaciones"
                                android:layout_width="match_parent"
                                android:layout_height="120dp"
                                android:layout_weight="1"
                                android:ems="10"
                                android:gravity="top"
                                android:hint="@string/observaciones"
                                android:importantForAutofill="no"
                                android:inputType="textMultiLine"
                                android:maxLines="5" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/precio_estimado_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textAlignment="center"
                    android:textColor="@color/dark"
                    android:textSize="35dp"
                    android:theme="@style/Texto" />

                <Button
                    android:id="@+id/solicitar_viaje"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_below="@id/precio_estimado_text"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/solicitar_viaje"
                    android:textAlignment="center"
                    android:theme="@style/Button" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
